apps/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-gateway
  namespace: gateway-demo

spec:
  gatewayClassName: envoy-gateway

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.microservices.home.arpa"

      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: platform-tls

      allowedRoutes:
        namespaces:
          from: All
