apps/gateway/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd

spec:
  parentRefs:
    - name: eg-gateway
      namespace: gateway-demo
      sectionName: https

  hostnames:
    - argocd.microservices.home.arpa

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: argocd-server
          port: 80
