apps/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: application-route
  namespace: microservices

spec:
  parentRefs:
    - name: eg-gateway
      namespace: gateway-demo

  rules:

    # Backend API
    - matches:
        - path:
            type: PathPrefix
            value: /api

      backendRefs:
        - name: backend
          port: 4000

    # Backend Internal API
    - matches:
        - path:
            type: PathPrefix
            value: /internal

      backendRefs:
        - name: backend
          port: 4000

    # Frontend
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: frontend
          port: 80
